# SubstrateStarter

./: customSpec.json  customSpecRaw.json
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs  service.rs
pallets/dotprices/: Cargo.toml
pallets/dotprices/src/: lib.rs  mock.rs  tests.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: chain_extension.rs  lib.rs
