[package]
authors = ['何直群 <hezhiqun@gmail.com>']
description = 'FRAME pallet dot prices.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-dotprices'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
# 计算浮点数
sp-arithmetic = { version = '2.0.0', default-features = false }
# serde 处理序列化 serde_json JSON 的解析
serde = { package = "alt_serde", version = "1", default-features = false, features = ["derive"] }
serde_json = { package = "alt_serde_json", version = "1", default-features = false, features = ["alloc"] }
# Substrate 的基础包
frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
sp-core = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }

[dev-dependencies]
# parking_lot 处理写入锁
parking_lot = "0.10.0"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "sp-io/std",
    "sp-runtime/std",
    "sp-arithmetic/std",
]